Fixed an issue where when entering a value like 11 the right side of the grid would show a consistent whitespace

--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,12 @@
     display: flex;
     flex-wrap: wrap;
     border: solid 1px black;
-    margin-left: auto;
-    margin-right: auto;
+    position: absolute;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
 
 }
 
